--- a/webroot/backend/css/custom.css
+++ b/webroot/backend/css/custom.css
@@ -48,5 +48,6 @@
 .widget , .tile {min-height: 120px !important;}
 .tile {padding: 20px 10px !important;}
 .description-graph {float: left; width: 100%; margin-left: 7px;}
+.input-group {max-width: 197px;}
 .input-group .form-control.datepicker {max-width: 80px; padding: 8px;}
 .control-label {margin-right: 5px; margin-left: 5px;}
