--- a/webroot/backend/css/custom.css
+++ b/webroot/backend/css/custom.css
@@ -49,9 +49,9 @@
 .tile {padding: 20px 10px !important;}
 .description-graph {float: left; width: 100%; margin-left: 7px;}
 .input-group {max-width: 197px;}
+.js-toggle-wrapper {max-width: 100% !important;}
 .input-group .form-control.datepicker {max-width: 80px; padding: 8px;}
 .control-label {margin-right: 5px; margin-left: 5px;}
-
 
 /* ui autocomplete */
 
