--- a/webroot/backend/css/custom.css
+++ b/webroot/backend/css/custom.css
@@ -240,3 +240,28 @@ tfoot > tr > td, tfoot > tr:first-child > td {
 .table>tbody>tr.success>td, .table>tbody>tr.success>th, .table>tbody>tr>td.success, .table>tbody>tr>th.success, .table>tfoot>tr.success>td, .table>tfoot>tr.success>th, .table>tfoot>tr>td.success, .table>tfoot>tr>th.success, .table>thead>tr.success>td, .table>thead>tr.success>th, .table>thead>tr>td.success, .table>thead>tr>th.success {
     background-color: #dff0d8 !important;
 }
+
+#modalSocios {
+    background-color: rgba(0,0,0,0.7);
+}
+
+
+.full-input-group {max-width: 100%;}
+.full-input-group .form-control.datepicker { max-width: 100%; }
+
+.logo-socios {
+    max-height: 40px;
+    display: block;
+    margin: 5px 15px;
+}
+
+@media screen and (max-width: 768px) {
+    .logo-socios {
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
+
+.text-red {
+    color: red;
+}
